fixed the overlay z-index problem

--- a/src/components/Layout/Header/MobileNavigation.module.scss
+++ b/src/components/Layout/Header/MobileNavigation.module.scss
@@ -1,26 +1,25 @@
 @import './Links.module.scss';
 
 .mobilenav > * {
-    display: none;
+	display: none;
 }
 
 .link_mobile {
-    @extend .link;
+	@extend .link;
 }
 
 @media screen and (max-width: 660px) {
-    .mobile {
-        z-index: 3;
-        display: flex;
-        position: relative;
-        justify-content: space-between;
-        align-items: center;
-        height: 3.5rem;
-        background-color: white;
-    }
+	.mobile {
+		z-index: 2;
+		display: flex;
+		position: relative;
+		justify-content: space-between;
+		align-items: center;
+		height: 3.5rem;
+		background-color: white;
+	}
 
-    .mobilenav > nav {
-        display: flex;
-    }
-
+	.mobilenav > nav {
+		display: flex;
+	}
 }
