--- a/src/components/UI/Containers.module.scss
+++ b/src/components/UI/Containers.module.scss
@@ -1,5 +1,4 @@
 .centered {
-	z-index: 2;
 	width: 100%;
 	max-width: 31.8rem;
 	height: 100%;
